# AttitudeMathLibrary

./: .clang-format  CMakeLists.txt  LICENSE  README.md
AML/: AML.hpp  AMLDCM.cpp  AMLDCM.hpp  AMLEulerAngles.cpp  AMLEulerAngles.hpp  AMLMatrix33.cpp  AMLMatrix33.hpp  AMLQuaternion.cpp  AMLQuaternion.hpp  AMLVector3.cpp  AMLVector3.hpp  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
test/: AMLDCMTest.cpp  AMLEulerAngleTest.cpp  AMLMatrix33Test.cpp  AMLQuaternionTest.cpp  AMLVector3Test.cpp  CMakeLists.txt  main.cpp
